@@ -1,0 +1,23 @@
+package zollerngalaxy.planets.satellites;
+
+import micdoodle8.mods.galacticraft.api.galaxies.Satellite;
+import micdoodle8.mods.galacticraft.core.world.gen.BiomeOrbit;
+import net.minecraft.util.ResourceLocation;
+import zollerngalaxy.planets.ZGPlanet;
+
+public class ZGSpaceStation extends Satellite {
+	
+	public ZGSpaceStation(String stationName, ZGPlanet parentBody) {
+		super("space_station." + stationName);
+		this.setParentBody(parentBody);
+		this.setRelativeSize(0.2667F);
+		this.setRelativeDistanceFromCenter(new ScalableDistance(5.5F, 5.5F));
+		this.setRelativeOrbitTime(20.0F);
+		this.setTierRequired(parentBody.getTierRequirement());
+		this.setBodyIcon(new ResourceLocation(
+				"galacticraftcore:textures/gui/celestialbodies/space_station.png"));
+		this.addChecklistKeys("thermal_padding", "equip_oxygen_suit", "equip_parachute");
+		this.setBiomeInfo(BiomeOrbit.space);
+	}
+	
+}
